<resources>
    <string name="app_name">ActivityFragmentLifecycle</string>
    <string name="name_activity">Activity 1</string>
    <string name="button_next">Next</string>
    <string name="name_activity2">Activity 2</string>
    <string name="button_previous">Back</string>
    <string name="name_activity3">Activity 3</string>
    <string name="your_score_text">Your Score:</string>
    <string name="score_0">0</string>
    <string name="add_button">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_fragment1">Fragment1</string>
    <string name="name_fragment2">Fragment2</string>
    <string name="name_fragment3">Fragment3</string>
    <string name="score_transferred">Transferred Score:</string>
    <string name="value_transferred" />
</resources>